--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sass": "^1.34.1",
     "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
+    "svgo-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.1.3",
     "typescript": "^4.3.3",
     "webpack": "^5.38.1",
